--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -23,100 +23,95 @@
                         <form class="form" action="##" method="post" id="registrationForm">
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="name"><h4>Volledige naam</h4></label>
+                                    <label for="name" class="h4">Volledige naam</label>
                                     <p>@Model.Patient.Name</p>
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label><h4>Geslacht</h4></label>
+                                    <label class="h4">Geslacht</label>
                                     @if (Model.Patient.Gender == Gender.Male)
                                     {
                                         <p>Man</p>
                                     }
-                                    else
+                                    else if (Model.Patient.Gender == Gender.Female)
                                     {
                                         <p>Vrouw</p>
                                     }
+                                    else
+                                    {
+                                        <p>Anders</p>
+                                    }
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="BSN"><h4>BSN</h4></label>
+                                    <label for="BSN" class="h4">BSN</label>
                                     <p>@Model.Patient.BSN</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="Birthday"><h4>Geboortedatum</h4></label>
+                                    <label for="Birthday" class="h4">Geboortedatum</label>
                                     <p>@Model.Patient.Birth.ToString("dd-MM-yyyy")</p>
                                 </div>
                             </div>
+
                             <div class="form-group">
-
-
                                 <div class="col-xs-6">
-                                    <label for="Username"><h4>Gebruikersnaam</h4></label>
+                                    <label for="Username" class="h4">Gebruikersnaam</label>
                                     <p>@Model.Patient.UserName</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="email"><h4>Email</h4></label>
+                                    <label for="email" class="h4">Email</label>
                                     <p>@Model.Patient.Email</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="phonenumber"><h4>Telefoonnummer</h4></label>
+                                    <label for="phonenumber" class="h4">Telefoonnummer</label>
                                     <p>@Model.Patient.PhoneNumber</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="mobile"><h4>Mobiele telefoonnummer</h4></label>
-                                    <p>@Model.Patient.PhoneNumber</p>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-
-                                <div class="col-xs-6">
-                                    <label for="Zipcode"><h4>Postcode</h4></label>
+                                    <label for="Zipcode" class="h4">Postcode</label>
                                     <p>@Model.Patient.Zipcode</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="HouseNumber"><h4>Huisnummer</h4></label>
+                                    <label for="HouseNumber" class="h4">Huisnummer</label>
                                     <p>@Model.Patient.HouseNumber</p>
                                 </div>
                             </div>
 
+                            <div class="form-group">
+                                <div class="col-xs-6">
+                                    <label for="ContactPersonName" class="h4">Contactpersoon naam</label>
+                                    <p>@Model.Patient.ContactPersonName</p>
+                                </div>
+                            </div>
 
                             <div class="form-group">
-                                <div class="form-group">
-                                    <div class="col-xs-6">
-                                        <label for="ContactPersonName"><h4>Contactpersoon naam</h4></label>
-                                        <p>@Model.Patient.ContactPersonName</p>
-                                    </div>
+                                <div class="col-xs-6">
+                                    <label for="ContactPersonPhoneNumber" class="h4">Contactpersoon telefoonnummer</label>
+                                    <p>@Model.Patient.ContactPersonPhone</p>
                                 </div>
-                                <div class="form-group">
-                                    <div class="col-xs-6">
-                                        <label for="ContactPersonPhoneNumber"><h4>Contactpersoon telefoonnummer</h4></label>
-                                        <p>@Model.Patient.ContactPersonPhone</p>
-                                    </div>
-                                </div>
-                                <div class="col-xs-12">
-                                    <br>
-                                    <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
-                                </div>
+                            </div>
+
+                            <div class="col-xs-12">
+                                <br>
+                                <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
                             </div>
 
                         </form>
@@ -126,6 +121,7 @@
                     </div><!--/tab-pane-->
                     <div class="tab-pane" id="messages">
                         <form class="form" action="#" method="post" id="registrationForm">
+
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -135,8 +131,8 @@
                                     Email
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
                                         <input type="checkbox" checked="@Model.Patient.PrivGender" disabled>
@@ -145,8 +141,8 @@
                                     Geslacht
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
                                         <input type="checkbox" checked="@Model.Patient.PrivBirthDate" disabled>
@@ -155,8 +151,8 @@
                                     Geboortedatum
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
                                         <input type="checkbox" checked="@Model.Patient.PrivPhoneNumber" disabled>
@@ -165,8 +161,8 @@
                                     Telefoonnummer
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
                                         <input type="checkbox" checked="@Model.Patient.PrivAdress" disabled>
@@ -175,6 +171,7 @@
                                     Adres
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -185,6 +182,7 @@
                                     Contact persoon telefoonnummer
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -194,6 +192,7 @@
                                     Contact persoon naam
                                 </div>
                             </div>
+
                         </form>
                     </div><!--/tab-pane-->
                 </div><!--/tab-pane-->
@@ -216,15 +215,17 @@ else if (Model.Doctor != null)
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
                         <form class="form" action="##" method="post" id="registrationForm">
+
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="name"><h4>Volledige naam</h4></label>
+                                    <label for="name" class="h4">Volledige naam</label>
                                     <p>@Model.Doctor.Name</p>
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label><h4>Geslacht</h4></label>
+                                    <label class="h4">Geslacht</label>
                                     @if (Model.Doctor.Gender == Gender.Male)
                                     {
                                         <p>Man</p>
@@ -239,60 +240,52 @@ else if (Model.Doctor != null)
                                     }
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="Employeenumber"><h4>Werknemersnummer</h4></label>
+                                    <label for="Employeenumber" class="h4">Werknemersnummer</label>
                                     <p>@Model.Doctor.EmployeeNumber</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="Birthday"><h4>Geboortedatum</h4></label>
+                                    <label for="Birthday" class="h4">Geboortedatum</label>
                                     <p>@Model.Doctor.Birth.ToString("dd-MM-yyyy")</p>
                                 </div>
                             </div>
+
                             <div class="form-group">
-
-
                                 <div class="col-xs-6">
-                                    <label for="Username"><h4>Gebruikersnaam</h4></label>
+                                    <label for="Username" class="h4">Gebruikersnaam</label>
                                     <p>@Model.Doctor.UserName</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="email"><h4>Email</h4></label>
+                                    <label for="email" class="h4">Email</label>
                                     <p>@Model.Doctor.Email</p>
                                 </div>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="phonenumber"><h4>Telefoonnummer</h4></label>
+                                    <label for="phonenumber" class="h4">Telefoonnummer</label>
                                     <p>@Model.Doctor.PhoneNumber</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-
-                                <div class="col-xs-6">
-                                    <label for="mobile"><h4>Mobiele telefoonnummer</h4></label>
-                                    <p>@Model.Doctor.PhoneNumber</p>
-                                </div>
-                            </div>
-                            <div class="form-group">
-
                                 <div class="col-xs-12">
-                                    <label for="treatments"><h4>Uitvoerbare behandelingen</h4></label>
+                                    <label for="treatments" class="h4">Uitvoerbare behandelingen</label>
                                     @foreach (var Type in Model.Doctor.TreatmentTypes)
                                     {
                                         <option>@Type.Name</option>
                                     }
                                 </div>
                             </div>
+
                             <div class="col-xs-12">
                                 <br>
                                 <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
@@ -304,6 +297,7 @@ else if (Model.Doctor != null)
                     <!-- Hier komt de code voor de tab privacy-->
                     <div class="tab-pane" id="privacy">
                         <form class="form" action="#" method="post" id="registrationForm">
+
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -313,6 +307,7 @@ else if (Model.Doctor != null)
                                     Email
                                 </div>
                             </div>
+
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -322,6 +317,7 @@ else if (Model.Doctor != null)
                                     Telefoonnummer
                                 </div>
                             </div>
+
                         </form>
                     </div><!--/tab-pane-->
                     <!--     Hier komt de code voor de tab privacy-->
